--- a/TME-EMT/Biblio/Local-TME-EMT.bib
+++ b/TME-EMT/Biblio/Local-TME-EMT.bib
@@ -10,7 +10,158 @@
    MRCLASS = {01A05 (01A70)},
   MRNUMBER = {3728304},
 }
-	
+@article {Hasanalizade-Shen-Wong*22,
+    AUTHOR = {Hasanalizade, Elchin and Shen, Quanli and Wong, Peng-Jie},
+     TITLE = {Counting zeros of the {R}iemann zeta function},
+   JOURNAL = {J. Number Theory},
+  FJOURNAL = {Journal of Number Theory},
+    VOLUME = {235},
+      YEAR = {2022},
+     PAGES = {219--241},
+      ISSN = {0022-314X},
+   MRCLASS = {11M26 (11M06)},
+  MRNUMBER = {4389021},
+       DOI = {10.1016/j.jnt.2021.06.032},
+}
+@article {Hasanalizade-Shen-Wong*21,
+    AUTHOR = {Hasanalizade, Elchin and Shen, Quanli and Wong, Peng-Jie},
+     TITLE = {Counting zeros of {D}edekind zeta functions},
+   JOURNAL = {Math. Comp.},
+  FJOURNAL = {Mathematics of Computation},
+    VOLUME = {91},
+      YEAR = {2021},
+    NUMBER = {333},
+     PAGES = {277--293},
+      ISSN = {0025-5718},
+   MRCLASS = {11R42 (11M26)},
+  MRNUMBER = {4350540},
+       DOI = {10.1090/mcom/3665},
+}
+@article {Bennett-Martin-OBryant-Rechnitzer*21,
+    AUTHOR = {Bennett, Michael A. and Martin, Greg and O'Bryant, Kevin and
+              Rechnitzer, Andrew},
+     TITLE = {Counting zeros of {D}irichlet {$L$}-functions},
+   JOURNAL = {Math. Comp.},
+  FJOURNAL = {Mathematics of Computation},
+    VOLUME = {90},
+      YEAR = {2021},
+    NUMBER = {329},
+     PAGES = {1455--1482},
+      ISSN = {0025-5718},
+   MRCLASS = {11M26 (11M20 11N13 11N37 11Y35 11Y40)},
+  MRNUMBER = {4232231},
+MRREVIEWER = {Timothy S. Trudgian},
+       DOI = {10.1090/mcom/3599},
+}
+@article {Croot-Sisask*10,
+    AUTHOR = {Croot, Ernie and Sisask, Olof},
+     TITLE = {A probabilistic technique for finding almost-periods of
+              convolutions},
+   JOURNAL = {Geom. Funct. Anal.},
+  FJOURNAL = {Geometric and Functional Analysis},
+    VOLUME = {20},
+      YEAR = {2010},
+    NUMBER = {6},
+     PAGES = {1367--1396},
+      ISSN = {1016-443X},
+   MRCLASS = {11B30 (05D40 11B13)},
+  MRNUMBER = {2738997},
+MRREVIEWER = {Wolfgang A. Schmid},
+       DOI = {10.1007/s00039-010-0101-8},
+}
+@article {Ren-Liang*01,
+    AUTHOR = {Ren, Yao-Feng and Liang, Han-Ying},
+     TITLE = {On the best constant in {M}arcinkiewicz-{Z}ygmund inequality},
+   JOURNAL = {Statist. Probab. Lett.},
+  FJOURNAL = {Statistics \& Probability Letters},
+    VOLUME = {53},
+      YEAR = {2001},
+    NUMBER = {3},
+     PAGES = {227--233},
+      ISSN = {0167-7152},
+   MRCLASS = {60E15},
+  MRNUMBER = {1841623},
+       DOI = {10.1016/S0167-7152(01)00015-3},
+}
+
+@article {Haagerup*81,
+    AUTHOR = {Haagerup, Uffe},
+     TITLE = {The best constants in the {K}hintchine inequality},
+   JOURNAL = {Studia Math.},
+  FJOURNAL = {Polska Akademia Nauk. Instytut Matematyczny. Studia
+              Mathematica},
+    VOLUME = {70},
+      YEAR = {1981},
+    NUMBER = {3},
+     PAGES = {231--283 (1982)},
+      ISSN = {0039-3223},
+   MRCLASS = {60E15 (10K20 60G50)},
+  MRNUMBER = {654838},
+MRREVIEWER = {J. Galambos},
+       DOI = {10.4064/sm-70-3-231-283},
+}
+@article {Croot-Laba-Sisask*13,
+    AUTHOR = {Croot, Ernie and \L aba, Izabella and Sisask, Olof},
+     TITLE = {Arithmetic progressions in sumsets and
+              {$L^p$}-almost-periodicity},
+   JOURNAL = {Combin. Probab. Comput.},
+  FJOURNAL = {Combinatorics, Probability and Computing},
+    VOLUME = {22},
+      YEAR = {2013},
+    NUMBER = {3},
+     PAGES = {351--365},
+      ISSN = {0963-5483},
+   MRCLASS = {11B30 (11B25)},
+  MRNUMBER = {3053851},
+MRREVIEWER = {Jin-Hui Fang},
+       DOI = {10.1017/S0963548313000060},
+}
+
+@book {Show-Teicher*97,
+    AUTHOR = {Chow, Yuan Shih and Teicher, Henry},
+     TITLE = {Probability theory},
+    SERIES = {Springer Texts in Statistics},
+   EDITION = {Third},
+      NOTE = {Independence, interchangeability, martingales},
+ PUBLISHER = {Springer-Verlag, New York},
+      YEAR = {1997},
+     PAGES = {xxii+488},
+      ISBN = {0-387-98228-0},
+   MRCLASS = {60-02 (60Exx 60Fxx 60G42 60G44)},
+  MRNUMBER = {1476912},
+       DOI = {10.1007/978-1-4612-1950-7},
+}
+
+@article {Mallesham*18,
+    AUTHOR = {Mallesham, Kummari},
+     TITLE = {Primes in sumsets},
+   JOURNAL = {Arch. Math. (Basel)},
+  FJOURNAL = {Archiv der Mathematik},
+    VOLUME = {110},
+      YEAR = {2018},
+    NUMBER = {2},
+     PAGES = {131--143},
+      ISSN = {0003-889X},
+   MRCLASS = {11N36 (11N13)},
+  MRNUMBER = {3746990},
+MRREVIEWER = {Xiannan Li},
+       DOI = {10.1007/s00013-017-1113-5},
+}
+@article {Srinivasan*65,
+    AUTHOR = {Srinivasan, B. R.},
+     TITLE = {The lattice point problem of many dimensional hyperboloids.
+              {III}},
+   JOURNAL = {Math. Ann.},
+  FJOURNAL = {Mathematische Annalen},
+    VOLUME = {160},
+      YEAR = {1965},
+     PAGES = {280--311},
+      ISSN = {0025-5831},
+   MRCLASS = {10.45 (10.25)},
+  MRNUMBER = {181614},
+MRREVIEWER = {S. Chowla},
+       DOI = {10.1007/BF01371611},
+}	
 @article {Axler*19,
     AUTHOR = {Axler, Christian},
      TITLE = {On the sum of the first {$n$} prime numbers},
@@ -783,6 +934,8 @@ MRREVIEWER = {Sary Drappeau},
        DOI = {10.1017/fms.2014.27},
 }
 
+
+
 @article {Li-Pratt-Shakan*17,
     AUTHOR = {Li, Junxian and Pratt, Kyle and Shakan, George},
      TITLE = {A lower bound for the least prime in an arithmetic
@@ -971,6 +1124,24 @@ MRREVIEWER = {J. L. Selfridge},
   MRNUMBER = {2680497},
 MRREVIEWER = {Valentin Blomer},
 }
+
+@article {Bettin-Chandee-Radziwill*17,
+    AUTHOR = {Bettin, Sandro and Chandee, Vorrapan and Radziwi\l \l , Maksym},
+     TITLE = {The mean square of the product of the {R}iemann zeta-function
+              with {D}irichlet polynomials},
+   JOURNAL = {J. Reine Angew. Math.},
+  FJOURNAL = {Journal f\"{u}r die Reine und Angewandte Mathematik. [Crelle's
+              Journal]},
+    VOLUME = {729},
+      YEAR = {2017},
+     PAGES = {51--79},
+      ISSN = {0075-4102},
+   MRCLASS = {11M06},
+  MRNUMBER = {3680370},
+MRREVIEWER = {Timothy S. Trudgian},
+       DOI = {10.1515/crelle-2014-0133},
+}
+
 @article {Betah*18,
     AUTHOR = {Haye Betah, Mohamed},
      TITLE = {Explicit expression of a {B}arban \& {V}ehov theorem},
@@ -1466,7 +1637,6 @@ MRREVIEWER = {L. Carlitz},
   MRNUMBER = {2825574},
 MRREVIEWER = {S. W. Graham},
        DOI = {10.4064/aa150-1-4},
-       URL = {http://dx.doi.org/10.4064/aa150-1-4},
 }
 
 
@@ -1497,7 +1667,7 @@ MRREVIEWER = {H. L. Montgomery},
   pages = 	 {4p},
   OPTmonth = 	 {},
   note = 	 {Addendum to 'Fast multi-precision computation of some Euler products'},
-  URL = {http://iml.univ-mrs.fr/~ramare/Maths/SomeEulerProducts-02.pdf},
+  URL = {https://ramare-olivier.github.io/Maths/SomeEulerProducts-02.pdf},
   OPTannote = 	 {}
 }
 @Article{Ettahri-Ramare-Surel*19p,
@@ -1586,9 +1756,24 @@ MRREVIEWER = {T. N. Shorey},
   note = 	 {Appendix by O. Serra},
   OPTannote = 	 {}
 }
+@article {Balasubramanian-Conrey-HeathBrown*85,
+    AUTHOR = {Balasubramanian, R. and Conrey, J. B. and Heath-Brown, D. R.},
+     TITLE = {Asymptotic mean square of the product of the {R}iemann
+              zeta-function and a {D}irichlet polynomial},
+   JOURNAL = {J. Reine Angew. Math.},
+  FJOURNAL = {Journal f\"{u}r die Reine und Angewandte Mathematik. [Crelle's
+              Journal]},
+    VOLUME = {357},
+      YEAR = {1985},
+     PAGES = {161--181},
+      ISSN = {0075-4102},
+   MRCLASS = {11M26 (11M20)},
+  MRNUMBER = {783539},
+MRREVIEWER = {Matti Jutila},
+}
 
-@Articleala{Balasubramanian-Ramare-Srivastav*21a,
-  author = 	 {O. Ramar\'e and Priyamvad Srivastav},
+@Article{Balasubramanian-Ramare-Srivastav*21a,
+  author = 	 {R. Balasubramanian and O. Ramar\'e and Priyamvad Srivastav},
   title = 	 {Products of three primes in large arithmetic progressions},
   journal = 	 {},
   year = 	 {2021},
@@ -1597,7 +1782,43 @@ MRREVIEWER = {T. N. Shorey},
   OPTnumber = 	 {},
   pages = 	 {14 pp.},
   OPTmonth = 	 {},
-  OPTannote = 	 {}
+  note = 	 {Submitted to IJNT}
+}
+@Article{Gun-Ramare-Sivaraman*22b,
+  author = 	 {Sanoli Gun and O. Ramar\'e and Jyothsnaa Sivaraman},
+  title = 	 {Counting ideals in ray classes},
+  journal = 	 {Submitted},
+  year = 	 {2022},
+  OPTkey = 	 {},
+  OPTvolume = 	 {},
+  OPTnumber = 	 {},
+  pages = 	 {21 pp.},
+  OPTmonth = 	 {},
+  note = 	 {Being finalized}
+}
+@Article{Deshouillers-Gun-Ramare-Sivaraman*22a,
+  author = 	 {Sanoli Gun, O. Ramar\'e and Jyothsnaa Sivaraman},
+  title = 	 {Representing ideal classes of ray class groups by product of prime ideals of small size},
+  journal = 	 {},
+  year = 	 {2022},
+  OPTkey = 	 {},
+  OPTvolume = 	 {},
+  OPTnumber = 	 {},
+  pages = 	 {32 pp.},
+  OPTmonth = 	 {},
+  note = 	 {Submitted to Compositio}
+}
+@Article{Balasubramanian-Ramare-Srivastav*21b,
+  author = 	 {R. Balasubramanian and O. Ramar\'e and Priyamvad Srivastav},
+  title = 	 {Product of primes in arithmetic progressions, {II}},
+  journal = 	 {},
+  year = 	 {2022},
+  OPTkey = 	 {},
+  OPTvolume = 	 {},
+  OPTnumber = 	 {},
+  pages = 	 {28 pp.},
+  OPTmonth = 	 {},
+  note = 	 {Submitted to Math. Comp.}
 }
 
 
@@ -1905,7 +2126,20 @@ MRREVIEWER = {Art{\=u}ras Dubickas},
        DOI = {10.1007/s00229-009-0262-7},
        URL = {http://dx.doi.org/10.1007/s00229-009-0262-7},
 }
-
+@Article{Phillips*33,
+ Author = {Eric {Phillips}},
+ Title = {{The zeta-function of Riemann: Further developments of van der Corput's method.}},
+ FJournal = {{The Quarterly Journal of Mathematics. Oxford Series}},
+ Journal = {{Q. J. Math., Oxf. Ser.}},
+ ISSN = {0033-5606},
+ Volume = {4},
+ Pages = {209--225},
+ Year = {1933},
+ Publisher = {Oxford University Press, Oxford},
+ Language = {English},
+ DOI = {10.1093/qmath/os-4.1.209},
+ Zbl = {59.0204.01}
+}
 @book {Boas*54,
     AUTHOR = {Boas, Jr., Ralph Philip},
      TITLE = {Entire functions},
@@ -2805,6 +3039,23 @@ MRREVIEWER = {Robert J. Anderson},
       YEAR = {2000},
    MRCLASS = {01A75},
   MRNUMBER = {2280877},
+}
+
+@book {Ramachandra*95,
+    AUTHOR = {Ramachandra, K.},
+     TITLE = {On the mean-value and omega-theorems for the {R}iemann
+              zeta-function},
+    SERIES = {Tata Institute of Fundamental Research Lectures on Mathematics
+              and Physics},
+    VOLUME = {85},
+ PUBLISHER = {Published for the Tata Institute of Fundamental Research,
+              Bombay; by Springer-Verlag, Berlin},
+      YEAR = {1995},
+     PAGES = {xiv+169},
+      ISBN = {3-540-58437-4},
+   MRCLASS = {11M06 (11M26)},
+  MRNUMBER = {1332493},
+MRREVIEWER = {Daniel A. Goldston},
 }
 @Article{Balasubramanian-Ramachandra*82,
   Title                    = {On the zeros of the {R}iemann zeta function and {$L$}-series. {II}},
@@ -3933,7 +4184,7 @@ MRREVIEWER = {R. A. Smith},
   File                     = {:/home/ramare/tex/Other/Iwaniec/IwaBombZeta.pdf:PDF}
 }
 
-@Article{Bombieri*74,
+@Book{Bombieri*74,
   Title                    = {Le grand crible dans la th\'eorie analytique des nombres},
   Author                   = {E. Bombieri},
   Journal                  = {Ast\'erisque},
@@ -4423,7 +4674,6 @@ MRREVIEWER = {Jan-Christoph Schlage-Puchta},
   Mrclass                  = {43A46},
   Mrnumber                 = {989397 (90h:43008)},
   Mrreviewer               = {Fran{\c{c}}oise Lust-Piquard},
-  Url                      = {\url{http://dx.doi.org/10.1007/BF02392838}}
 }
 
 @Article{Bourgain*89-2,
@@ -4442,7 +4692,6 @@ MRREVIEWER = {Jan-Christoph Schlage-Puchta},
   Mrclass                  = {43A46 (11K31)},
   Mrnumber                 = {1029904 (91d:43018)},
   Mrreviewer               = {Fran{\c{c}}oise Lust-Piquard},
-  Url                      = {\url{http://dx.doi.org/10.1007/BF02764948}}
 }
 
 @Article{Bourgain*85,
@@ -5357,6 +5606,16 @@ MRREVIEWER = {Olivier Bordell\`es},
   Number                   = {3},
   Pages                    = {517-526},
   Volume                   = {42}
+}
+@Article{Ramare-22b,
+  Title                    = {The number of rational numbers determined by large sets of sifted integers},
+  Author                   = {O. Ramar\'e},
+  Journal                  = {},
+  Year                     = {2021},
+  Number                   = {},
+  Pages                    = {14 pp.},
+  OPTVolume                   = {},
+  note = {Submitted to Proceedings -- Mathematical Sciences, India}
 }
 
 @article {Cilleruelo-Ramare-Ramare-16,
@@ -6397,6 +6656,22 @@ MRREVIEWER = {J. Lehner},
   Volume                   = {26},
 
   File                     = {:/home/ramare/tex/Other/Diamond/ensmat-001_1980_26_1-2_a_019_d.pdf:PDF}
+}
+
+
+
+@Article{Ramare-Sedunova-Sharma*22,
+  author = 	 {O. Ramar\'e and A. Sedunova and R. Sharma},
+  title = 	 {A higher {L}evin-{F}ainleib {T}heorem},
+  journal = 	 {},
+  year = 	 {2021},
+  OPTkey = 	 {},
+  OPTvolume = 	 {},
+  OPTnumber = 	 {},
+  pages = 	 {14pp.},
+  OPTmonth = 	 {},
+  note = 	 {Submitted to Proceedings -- Mathematical Sciences, India},
+  OPTannote = 	 {}
 }
 
 @Book{Diamond-Halberstam-Galway*08,
@@ -8897,7 +9172,21 @@ MRREVIEWER = {Yifan Yang},
   Mrnumber                 = {804246 (86k:11048)},
   Mrreviewer               = {Matti Jutila}
 }
-
+@article {Graham*86,
+    AUTHOR = {Graham, S. W.},
+     TITLE = {An algorithm for computing optimal exponent pairs},
+   JOURNAL = {J. London Math. Soc. (2)},
+  FJOURNAL = {Journal of the London Mathematical Society. Second Series},
+    VOLUME = {33},
+      YEAR = {1986},
+    NUMBER = {2},
+     PAGES = {203--218},
+      ISSN = {0024-6107},
+   MRCLASS = {11L40},
+  MRNUMBER = {838631},
+MRREVIEWER = {Werner Georg Nowak},
+       DOI = {10.1112/jlms/s2-33.2.203},
+}
 @Book{Graham-Kolesnik*91,
   Title                    = {{Van der Corput's Method of Exponential Sums}},
   Author                   = {S. W. Graham and G. Kolesnik},
@@ -9227,7 +9516,7 @@ MRREVIEWER = {Mei Chu Chang},
   OPTnumber = 	 {},
   pages = 	 {16pp},
   OPTmonth = 	 {},
-  OPTnote = 	 {},
+  note = 	 {Submitted to Israel J.},
   OPTannote = 	 {}
 }
 
@@ -11041,6 +11330,37 @@ MRREVIEWER = {Lutz Gerhard Lucht},
 MRREVIEWER = {Hartmut Menzer},
        DOI = {10.1007/BF01535578},
        URL = {http://dx.doi.org/10.1007/BF01535578},
+}
+@article {Watt*89,
+    AUTHOR = {Watt, N.},
+     TITLE = {Exponential sums and the {R}iemann zeta-function. {II}},
+   JOURNAL = {J. London Math. Soc. (2)},
+  FJOURNAL = {Journal of the London Mathematical Society. Second Series},
+    VOLUME = {39},
+      YEAR = {1989},
+    NUMBER = {3},
+     PAGES = {385--404},
+      ISSN = {0024-6107},
+   MRCLASS = {11L40 (11M06)},
+  MRNUMBER = {1002452},
+MRREVIEWER = {Matti Jutila},
+       DOI = {10.1112/jlms/s2-39.3.385},
+
+}
+@article {Huxley-Watt*88,
+    AUTHOR = {Huxley, M. N. and Watt, N.},
+     TITLE = {Exponential sums and the {R}iemann zeta function},
+   JOURNAL = {Proc. London Math. Soc. (3)},
+  FJOURNAL = {Proceedings of the London Mathematical Society. Third Series},
+    VOLUME = {57},
+      YEAR = {1988},
+    NUMBER = {1},
+     PAGES = {1--24},
+      ISSN = {0024-6115},
+   MRCLASS = {11L40 (11M06)},
+  MRNUMBER = {940429},
+MRREVIEWER = {M. Jutila},
+       DOI = {10.1112/plms/s3-57.1.1},
 }
 @Article{Huxley-Ivic*07,
   Title                    = {Subconvexity for the {R}iemann zeta-function and the divisor problem},
@@ -13931,8 +14251,8 @@ F\"ur eine positive ganze Zahl $n$ werde $L(n)=0$ gesetzt, wenn $n=1$ ist oder v
 }
 
 @InBook{Ramare-Rassias*16,
-  author =    {M. Rassias},
-  ALTeditor =    {},
+  author =    {O. Ramar\'e},
+  editor =    {M. Rassias},
   chapter =        {"A sketch of {H}. {H}elfgott's proof of {G}oldbach's {T}ernary {C}onjecture"},
   title =      {Goldbach's Conjecture: Selected Topics},
   publisher =    {Springer},
@@ -13945,9 +14265,16 @@ F\"ur eine positive ganze Zahl $n$ werde $L(n)=0$ gesetzt, wenn $n=1$ ist oder v
   OPTaddress =   {},
   OPTedition =   {},
   OPTmonth =     {},
-  OPTpages =     {},
+  pages =     {85-89},
   OPTnote =      {},
   OPTannote =    {}
+}
+
+@Misc{Ramare*21-s,
+author =   {O. Ramar\'e},
+title =    {{Sage}: {C}omputing {L}attice {I}nvariant {E}uler {P}roducts {L}ibrary},
+url = {https://ramare-olivier.github.io/Maths/LatticeInvariantEulerProducts-06.sage},
+year = {2020}
 }
 
 @Article{Matthiesen*12,
@@ -14791,6 +15118,22 @@ MRREVIEWER = {Deyu Zhang},
        DOI = {10.1112/S0010437X13007732},
 }
 
+
+
+@Article{Drappeau-Ganguly-Ramare*20,
+  author = 	 {S. Drappeau and S. Ganguly and O. Ramar\'e},
+  title = 	 {A modular analogue of a problem of {V}inogradov},
+  journal = 	 {},
+  year = 	 {2020},
+  OPTkey = 	 {},
+  OPTvolume = 	 {},
+  OPTnumber = 	 {},
+  pages = 	 {10 pp.},
+  OPTmonth = 	 {},
+  note = 	 {Submitted to Ramanujan J.},
+  OPTannote = 	 {}
+}
+
 @article {Jutila*87,
     AUTHOR = {Jutila, M.},
      TITLE = {On exponential sums involving the {R}amanujan function},
@@ -14943,7 +15286,6 @@ MRREVIEWER = {Matti Jutila},
   Mrclass                  = {11R45 (11R42)},
   Mrnumber                 = {2286834 (2007j:11161)},
   Mrreviewer               = {Michael E. Pohst},
-  Url                      = {http://dx.doi.org/10.1016/j.exmath.2006.08.001}
 }
 
 @Article{Nagura*52,
@@ -15491,6 +15833,18 @@ MRREVIEWER = {D. R. Heath-Brown},
   OPTnote =      {},
   OPTannote =    {}
 }
+@Article{Ramare*22-1,
+  author =       {O. Ramar\'e},
+  title =        {Addendum to {M}odified truncated {P}erron formulae},
+  journal =      {},
+  year =         {2022},
+  OPTkey =       {},
+  OPTvolume =    {},
+  OPTnumber =    {},
+  pages =     {3 pp.},
+  OPTmonth =     {},
+  note =      {Submitted to Ann. Blaise Pascal}
+}
 
 @Article{Perron*08,
   Title                    = {{Zur Theorie der {\it Dirichlet}schen Reihen.}},
@@ -15702,7 +16056,34 @@ MRREVIEWER = {Francesco Sica},
   Volume = {26},
   Pages                    = {77-92}
 }
+@Unpublished{Sutherland*15,
+  author = 	 {Sutherland, A.},
+  title = 	 {Class field theory, ray class groups and ray class fields},
+  note = 	 {MIT Mathematics, 18.785, Number Theory I, Lecture \# 20},
+  OPTkey = 	 {},
+  OPTmonth = 	 {},
+  year = 	 {2015},
+  OPTannote = 	 {},
+  URL= {http://math.mit.edu/classes/18.785/2015fa/LectureNotes20.pdf}
+}
 
+@article {Liang-Zassenhaus*77,
+    AUTHOR = {Liang, J. and Zassenhaus, H.},
+     TITLE = {The minimum discriminant of sixth degree totally complex
+              algebraic number fields},
+   JOURNAL = {J. Number Theory},
+  FJOURNAL = {Journal of Number Theory},
+    VOLUME = {9},
+      YEAR = {1977},
+    NUMBER = {1},
+     PAGES = {16--35},
+      ISSN = {0022-314X},
+   MRCLASS = {12A45 (12A55)},
+  MRNUMBER = {427270},
+MRREVIEWER = {Charles J. Parry},
+       DOI = {10.1016/0022-314X(77)90046-4},
+}
+		
 @Book{Pohst-Zassenhaus*89,
   Title                    = {Algorithmic algebraic number theory},
   Author                   = {M. Pohst and H. Zassenhaus},
@@ -15719,7 +16100,6 @@ MRREVIEWER = {Francesco Sica},
   Mrnumber                 = {1033013 (92b:11074)},
   Mrreviewer               = {Charles J. Parry},
   Pages                    = {xiv+465},
-  Url                      = {http://dx.doi.org/10.1017/CBO9780511661952}
 }
 
 @Article{Poitou*75,
@@ -16399,6 +16779,21 @@ MRREVIEWER = {Nadya Gurevich},
 MRREVIEWER = {Nadya Gurevich},
        DOI = {10.1090/S1061-0022-08-01024-8},
 }
+
+@article {Rankin*55,
+    AUTHOR = {Rankin, R. A.},
+     TITLE = {Van der {C}orput's method and the theory of exponent pairs},
+   JOURNAL = {Quart. J. Math. Oxford Ser. (2)},
+  FJOURNAL = {The Quarterly Journal of Mathematics. Oxford. Second Series},
+    VOLUME = {6},
+      YEAR = {1955},
+     PAGES = {147--153},
+      ISSN = {0033-5606},
+   MRCLASS = {10.1X},
+  MRNUMBER = {72170},
+MRREVIEWER = {Paul T. Bateman},
+       DOI = {10.1093/qmath/6.1.147},
+}
 		
 @article {Rankin*39,
     AUTHOR = {Rankin, R. A.},
@@ -16419,22 +16814,24 @@ MRREVIEWER = {A. E. Ingham},
 }
 @Article{Ramare*13a,
   Title                    = {Modular Ternary Additive Problems with Irregular or Prime Numbers},
-  Author                   = {G. K. Viswanadham and O. {Ramar\'e}},
-  Journal                  = {Proc. Steklov Inst. Math.},
-  Year                     = {2021},
-  Pages                    = {48pp},
-  Notes ={Volume dedicated to I.M. Vinogradov},
-  Volume ={314},}
-
-@Article{Ramare-Kasi*21,
-  Title                    = {Modular Ternary Additive Problems with Irregular or Prime Numbers},
   Author                   = {O. {Ramar\'e} and G. K. Viswanadham},
   Journal                  = {Proc. Steklov Inst. Math.},
   Year                     = {2021},
-  Pages                    = {48pp},
-  Notes ={Volume dedicated to I.M. Vinogradov},
-  Volume ={314},
+  Pages                    = {211-247},
+  Note ={Volume dedicated to I.M. Vinogradov},
+  Volume ={314}
+  }
+
+@Article{Ramare-Kasi*21b,
+  Title                    = {Exponential sums over primes with multiplicative  coefficients},
+  Author                   = {O. {Ramar\'e} and G. K. Viswanadham},
+  Journal                  = {.},
+  Year                     = {2021},
+  Pages                    = {19pp},
+  Note = {Submitted to Math. Zeit.},
+  OPTVolume ={},
 }
+
 
 @Article{Ramare*13b,
   Title                    = {Some uncanny hermitian integral inequalities},
@@ -16681,7 +17078,17 @@ MRREVIEWER = {D. J. Lewis},
   Pages                    = {645-706},
   Volume                   = {21}
 }
-
+@book {Ramare*22-0,
+    AUTHOR = {Ramar\'e, Olivier},
+     TITLE = {Excursions in {M}ultiplicative {N}umber {T}heory},
+    SERIES = {Birkh\"{a}user Advanced Texts: Basler Lehrb\"{u}cher. [Birkh\"{a}user
+              Advanced Texts: Basel Textbooks]},
+      NOTE = {With the collaboration of P. Moree and A. Sedunova},
+ PUBLISHER = {Birkh\"{a}user/Springer, Cham},
+ISSN = {1019-6242},
+      YEAR = {[2022] \copyright 2022},
+     PAGES = {xxii+338},
+}
 @article {Ramare*20a,
     AUTHOR = {Ramar\'{e}, O.},
      TITLE = {Accurate computations of {E}uler products over primes in
@@ -19078,7 +19485,7 @@ MRREVIEWER = {Guilherme Starvaggi Fran{\c{c}}a},
 
 @Article{Vaughan*77b,
   Title                    = {Sommes trigonom\'etriques sur les nombres premiers},
-  Author                   = {R.C. Vaughan},
+  Author                   = {{R.C.} Vaughan},
   Journal                  = {C. R. Acad. Sci. Paris S\'er. A-B},
   Year                     = {1977},
   Number                   = {16},
@@ -19089,7 +19496,7 @@ MRREVIEWER = {Guilherme Starvaggi Fran{\c{c}}a},
   Mrnumber                 = {MR0498434 (58 \#16555)}
 }
 @article {Vaughan*80,
-    AUTHOR = {Vaughan, R. C.},
+    AUTHOR = {{R.C.} Vaughan},
      TITLE = {An elementary method in prime number theory},
    JOURNAL = {Acta Arith.},
   FJOURNAL = {Polska Akademia Nauk. Instytut Matematyczny. Acta Arithmetica},
@@ -19119,7 +19526,6 @@ MRREVIEWER = {J. Knopfmacher},
   Mrclass                  = {11L20 (11L03)},
   Mrnumber                 = {924237 (89e:11049)},
   Mrreviewer               = {E. Stankus},
-  Url                      = {http://dx.doi.org/10.1112/blms/20.2.121}
 }
 
 @Article{Vinogradov*65,
