--- a/TME-EMT/Biblio/biblio.tex
+++ b/TME-EMT/Biblio/biblio.tex
@@ -42,6 +42,8 @@
 \nocite{Rosser*41}
 \nocite{Ramare-Saouter*02}
 \nocite{Trudgian*13}
+\nocite{Hasanalizade-Shen-Wong*22}
+\nocite{Bennett-Martin-OBryant-Rechnitzer*21}
 \nocite{Helgott*17u}
 \nocite{Bastion-Rogalaski*02}
 \nocite{Ramare*13d}
@@ -314,6 +316,7 @@
 \nocite{Trudgian*13}
 \nocite{Kadiri-Ng*12}
 \nocite{Trudgian*14-1}
+\nocite{Hasanalizade-Shen-Wong*21}
 \nocite{Kadiri*12}
 \nocite{Ahn-Kwon*14}
 \nocite{Montgomery-Vaughan*74}
