--- a/TME-EMT/Latex/Art06.tex
+++ b/TME-EMT/Latex/Art06.tex
@@ -236,7 +236,7 @@ $O^*(0.67\log\frac{T}{2\pi})$ when $T\ge 10^3$.
 This is improved in Corollary 1 of
 \cite{Trudgian*13}
 into
-\begin{thm}{Theorem (1941)}
+\begin{thm}{Theorem (2014)}
 
 For $T\ge e$, we have
 $$
@@ -252,6 +252,48 @@ N(T)=\sum_{\substack{\rho,\\ 0 < \gamma\le T}} 1=
 
 
 
+Corollary 1.4 of the main theorem of
+\cite{Hasanalizade-Shen-Wong*22}
+reads
+\begin{thm}{Theorem (2022)}
+
+For $T\ge e$, we have
+$$
+N(T)=\sum_{\substack{\rho,\\ 0 < \gamma\le T}} 1=
+            \frac{T}{2\pi}\log\frac{T}{2\pi}-\frac{T}{2\pi}+\frac{7}{8}
+            +O^*\bigl(0.1038\log T+0.2573\log\log T+9.3675
+            \bigr)
+            $$
+            where the summation is over all zeros of the Riemann
+            $\zeta$-function of
+				 imaginary part between 0 and $T$, with multiplicity.
+				 We may also replace $0.1038\log
+				 T+0.2573\log\log T+9.3675$ by $0.1095\log T+0.2042\log\log T+3.0305$.
+\end{thm}
+
+
+
+Concerning Dirichlet $L$-functions, the paper
+\cite{Bennett-Martin-OBryant-Rechnitzer*21}
+contains the next result.
+
+\begin{thm}{Theorem (2021)}
+
+    Let $\chi$ be a Dirichlet character of conductor $q > 1$.
+For $T\ge 5/7$ and $\ell= \log\frac{q(T+2)}{2\pi} > 1.567, we have
+$$
+N(T,\chi)=\sum_{\substack{\rho,\\ 0 < \gamma\le T}} 1=
+            \frac{T}{\pi}\log\frac{qT}{2\pi}-\frac{T}{\pi}+\frac{\chi(-1)}{4}
+            +O^*\bigl(0.22737\ell+2\log(1+\ell)-0.5
+            \bigr)
+            $$
+            where the summation is over all zeros of the Dirichlet
+            function $L(\cdot,\chi)$ of
+				 imaginary part between $-T$ and $T$, with multiplicity.
+				 
+\end{thm}
+
+
 
 
 
@@ -263,7 +305,7 @@ We can find in
 \cite{Helgott*17u} the proof
 of the following estimate. Though it is unpublished yet, the full proof
 is available.
-\begin{thm}{Theorem (1941)}
+\begin{thm}{Theorem (2019)}
 
 Let $0 < \sigma\le1$ and $T \ge 3$. Then
   $$
@@ -346,7 +388,7 @@ slightly weaker version.
 
 
   
-\begin{flushright}\small\sl{}   Last updated on June 18th, 2019, by Olivier Ramar\'e
+\begin{flushright}\small\sl{}   Last updated on April 29th, 2022, by Olivier Ramar\'e
  \end{flushright}
 
 
