--- a/TME-EMT/Latex/Art18.tex
+++ b/TME-EMT/Latex/Art18.tex
@@ -52,14 +52,27 @@ After a first result in
 \cite{Kadiri-Ng*12},
 we find in
 \cite{Trudgian*14-1}
-The following result.
+the following result.
 
 \par 
-\begin{thm}{Theorem (1959)}
+\begin{thm}{Theorem (2014)}
 
  When $T\ge1$, we have
  $N_K(T)=\frac{T}{\pi}\log\Bigl(|d_K|\Big(\frac{T}{2\pi e}\Bigr)^n\Bigr)
  +O^*\bigl(0.316(\log |d_K|+n\log T)+5.872 n+3.655\bigr)$ .
+\end{thm}
+
+
+This is improved in 
+\cite{Hasanalizade-Shen-Wong*21}
+into:
+
+\par 
+\begin{thm}{Theorem (2021)}
+
+ When $T\ge1$, we have
+ $N_K(T)=\frac{T}{\pi}\log\Bigl(|d_K|\Big(\frac{T}{2\pi e}\Bigr)^n\Bigr)
+ +O^*\bigl(0.228(\log |d_K|+n\log T)+23.108 n+4.520\bigr)$ .
 \end{thm}
 
 
@@ -96,7 +109,7 @@ for a result for Hecke $L$-series.
 
 
   
-\begin{flushright}\small\sl{}   Last updated on February 14th, 2017, by Olivier Ramar\'e
+\begin{flushright}\small\sl{}   Last updated on April 29th, 2022, by Olivier Ramar\'e
  \end{flushright}
 
 
