--- a/TME-EMT/Biblio/biblio.tex
+++ b/TME-EMT/Biblio/biblio.tex
@@ -234,6 +234,8 @@
 \nocite{Landau*18-3}
 \nocite{Granville-Soundararajan*07}
 \nocite{Granville-Soundararajan*07}
+\nocite{Bordignon-Kerr*20}
+\nocite{Bordignon*21}
 \nocite{Trevino*15-2}
 \nocite{McGown*12}
 \nocite{Booker*06}
