--- a/TME-EMT/Latex/Local-TME-EMT.bib
+++ b/TME-EMT/Latex/Local-TME-EMT.bib
@@ -37,6 +37,21 @@
   MRNUMBER = {4350540},
        DOI = {10.1090/mcom/3665},
 }
+@article {Bordignon*21,
+    AUTHOR = {Bordignon, Matteo},
+     TITLE = {A {P}\'{o}lya-{V}inogradov inequality for short character sums},
+   JOURNAL = {Canad. Math. Bull.},
+  FJOURNAL = {Canadian Mathematical Bulletin. Bulletin Canadien de
+              Math\'{e}matiques},
+    VOLUME = {64},
+      YEAR = {2021},
+    NUMBER = {4},
+     PAGES = {906--910},
+      ISSN = {0008-4395},
+   MRCLASS = {11L40 (11L05)},
+  MRNUMBER = {4352656},
+       DOI = {10.4153/S0008439520000934},
+}
 @article {Bennett-Martin-OBryant-Rechnitzer*21,
     AUTHOR = {Bennett, Michael A. and Martin, Greg and O'Bryant, Kevin and
               Rechnitzer, Andrew},
@@ -52,6 +67,37 @@
   MRNUMBER = {4232231},
 MRREVIEWER = {Timothy S. Trudgian},
        DOI = {10.1090/mcom/3599},
+}
+@article {Bordignon-Kerr*20,
+    AUTHOR = {Bordignon, Matteo and Kerr, Bryce},
+     TITLE = {An explicit {P}\'{o}lya-{V}inogradov inequality via partial
+              {G}aussian sums},
+   JOURNAL = {Trans. Amer. Math. Soc.},
+  FJOURNAL = {Transactions of the American Mathematical Society},
+    VOLUME = {373},
+      YEAR = {2020},
+    NUMBER = {9},
+     PAGES = {6503--6527},
+      ISSN = {0002-9947},
+   MRCLASS = {11L40 (11H06 11H60 11L05)},
+  MRNUMBER = {4155184},
+MRREVIEWER = {Sary Drappeau},
+       DOI = {10.1090/tran/8138},
+}
+@article {Bordignon*21,
+    AUTHOR = {Bordignon, Matteo},
+     TITLE = {A {P}\'{o}lya-{V}inogradov inequality for short character sums},
+   JOURNAL = {Canad. Math. Bull.},
+  FJOURNAL = {Canadian Mathematical Bulletin. Bulletin Canadien de
+              Math\'{e}matiques},
+    VOLUME = {64},
+      YEAR = {2021},
+    NUMBER = {4},
+     PAGES = {906--910},
+      ISSN = {0008-4395},
+   MRCLASS = {11L40 (11L05)},
+  MRNUMBER = {4352656},
+       DOI = {10.4153/S0008439520000934},
 }
 @article {Croot-Sisask*10,
     AUTHOR = {Croot, Ernie and Sisask, Olof},
