--- a/TME-EMT/Latex/Art14.tex
+++ b/TME-EMT/Latex/Art14.tex
@@ -66,13 +66,31 @@ Theorem 9.7 and 9.8 from
 \cite{Nathanson*96-2}.
 
 
+\section{Integers free of small prime factors}
+
+
+In
+\cite{Fan*22}, K. Fan proved
+the following neat estimate.
+\par 
+\begin{thm}{Theorem (2022)}
+
+Let $\Phi(x,z)$ be the number of integers $\le x$ that do not have any
+prime factors below $z$. We have
+$\displaystyle
+\Phi(x,z)\le \frac{x}{\log z},
+\quad(1 < z\le x).
+$
+\end{thm}
+
+
 
 
 
 
 
   
-\begin{flushright}\small\sl{}   Last updated on July 18th, 2013, by Olivier Ramar\'e
+\begin{flushright}\small\sl{}   Last updated on May 19th, 2022, by Olivier Ramar\'e
  \end{flushright}
 
 
