--- a/TME-EMT/Latex/Local-TME-EMT.bib
+++ b/TME-EMT/Latex/Local-TME-EMT.bib
@@ -1,5 +1,45 @@
 % This file was created with JabRef 2.10b2.
 % Encoding: UTF-8
+@article {Fan*22,
+    AUTHOR = {Fan, Kai},
+     TITLE = {An inequality for the distribution of numbers free of small
+              prime factors},
+   JOURNAL = {Integers},
+  FJOURNAL = {Integers. Electronic Journal of Combinatorial Number Theory},
+    VOLUME = {22},
+      YEAR = {2022},
+     PAGES = {Paper No. A26, 12},
+   MRCLASS = {11N25},
+  MRNUMBER = {4390731},
+}
+		
+@book {Kaniuth*09,
+    AUTHOR = {Kaniuth, Eberhard},
+     TITLE = {A course in commutative {B}anach algebras},
+    SERIES = {Graduate Texts in Mathematics},
+    VOLUME = {246},
+ PUBLISHER = {Springer, New York},
+      YEAR = {2009},
+     PAGES = {xii+353},
+      ISBN = {978-0-387-72475-1},
+   MRCLASS = {46Jxx (43A20 46-01)},
+  MRNUMBER = {2458901},
+MRREVIEWER = {Pamela Gorkin},
+       DOI = {10.1007/978-0-387-72476-8},
+}
+@article {Ramare*22-2,
+    AUTHOR = {Ramar\'e, Olivier},
+     TITLE = {A Stronger Model for Peg Solitaire},
+   JOURNAL = {Math. Newsl.},
+  FJOURNAL = {Mathematics Newsletter},
+    VOLUME = {32},
+      YEAR = {2021},
+    NUMBER = {2},
+     PAGES = {35--49},
+      ISSN = {0971-1694},
+   MRCLASS = {15A18 (12D05)},
+  MRNUMBER = {4399405},
+}
 @book {Bell*65,
     AUTHOR = {Bell, E. T.},
      TITLE = {Men of mathematics},
@@ -1866,8 +1906,38 @@ MRREVIEWER = {Matti Jutila},
   OPTmonth = 	 {},
   note = 	 {Submitted to Math. Comp.}
 }
+@article {RyllNardzewski*64,
+    AUTHOR = {Ryll-Nardzewski, C.},
+     TITLE = {Concerning almost periodic extensions of functions},
+   JOURNAL = {Colloq. Math.},
+  FJOURNAL = {Colloquium Mathematicum},
+    VOLUME = {12},
+      YEAR = {1964},
+     PAGES = {235--237},
+      ISSN = {0010-1354},
+   MRCLASS = {42.30},
+  MRNUMBER = {173129},
+MRREVIEWER = {H. Burkill},
+       DOI = {10.4064/cm-12-2-235-237},
 
-
+}
+		
+@article {Kunen-Rudin*99,
+    AUTHOR = {Kunen, Kenneth and Rudin, Walter},
+     TITLE = {Lacunarity and the {B}ohr topology},
+   JOURNAL = {Math. Proc. Cambridge Philos. Soc.},
+  FJOURNAL = {Mathematical Proceedings of the Cambridge Philosophical
+              Society},
+    VOLUME = {126},
+      YEAR = {1999},
+    NUMBER = {1},
+     PAGES = {117--137},
+      ISSN = {0305-0041},
+   MRCLASS = {43A40 (22A10 43A46)},
+  MRNUMBER = {1681658},
+MRREVIEWER = {Temple H. Fay},
+       DOI = {10.1017/S030500419800317X},
+}
 @book {Borevitch-Chafarevitch*93,
     AUTHOR = {Borevitch, Z. I. and Chafarevitch, I. R.},
      TITLE = {Th\'eorie des nombres},
@@ -10715,6 +10785,24 @@ MRREVIEWER = {Werner H{\"u}rlimann},
   Pages                    = {375-391},
   Volume                   = {4}
 }
+
+@book {Hewitt-Ross*79,
+    AUTHOR = {Hewitt, Edwin and Ross, Kenneth A.},
+     TITLE = {Abstract harmonic analysis. {V}ol. {I}},
+    SERIES = {Grundlehren der Mathematischen Wissenschaften [Fundamental
+              Principles of Mathematical Sciences]},
+    VOLUME = {115},
+   EDITION = {Second},
+      NOTE = {Structure of topological groups, integration theory, group
+              representations},
+ PUBLISHER = {Springer-Verlag, Berlin-New York},
+      YEAR = {1979},
+     PAGES = {ix+519},
+      ISBN = {3-540-09434-2},
+   MRCLASS = {43-02 (22-01)},
+  MRNUMBER = {551496},
+}
+
 
 @Article{Hewitt*Williamson*57,
   Title                    = {Note on absolutely convergent {D}irichlet series},
