--- a/TME-EMT/Latex/Art14.tex
+++ b/TME-EMT/Latex/Art14.tex
@@ -70,13 +70,13 @@ Theorem 9.7 and 9.8 from
 
 
 In
-\cite{Fan*22}, K. Fan proved
-the following neat estimate.
+\cite{Fan*22}, 
+the following neat estimate is proved.
 \par 
 \begin{thm}{Theorem (2022)}
 
 Let $\Phi(x,z)$ be the number of integers $\le x$ that do not have any
-prime factors below $z$. We have
+prime factors $\le z$. We have
 $\displaystyle
 \Phi(x,z)\le \frac{x}{\log z},
 \quad(1 < z\le x).
