--- a/TME-EMT/Latex/Art01.tex
+++ b/TME-EMT/Latex/Art01.tex
@@ -174,7 +174,8 @@ and in
 
 By comparing in an efficient manner with $\psi(x)-x$,
 \cite{Ramare*12-1},
-obtained the next two results.
+obtained the next two results. [There was an error in this paper which
+is corrected below].
 
 \par 
 Theorem (2013)
@@ -182,8 +183,9 @@ Theorem (2013)
 
   For $x > 1$, we have
   $\sum_{n\le x}\Lambda(n)/n=\log x-\gamma+O^*(1.833/\log^2x)$.
-  When $x\ge 23$, we can replace the error term by $O^*(0.0067/\log
-  x)$.
+  When $x\ge 1\,520\,000$, we can replace the error term by $O^*(0.0067/\log
+  x)$. When $x\ge 468\,000$, we can replace the error term by $O^*(0.01/\log
+  x)$. 
   Furthermore, when $1\le x\le 10^{10}$, this error term can be
   replaced by $O^*(1.31/\sqrt{x})$. 
 \end{thm}
@@ -650,7 +652,7 @@ More precise bounds are given.
 
 
   
-\begin{flushright}\small\sl{}   Last updated on January 22nd, 2022, by Olivier Ramar\'e
+\begin{flushright}\small\sl{}   Last updated on June 3rd, 2022, by Olivier Ramar\'e
  \end{flushright}
 
 
